Sprint 2 Swagger updates for Manage Event and Manage Booking
