# services/events-service/python-flask-server/swagger_server/controllers/events_controller.py
@@ -5,11 +5,38 @@ from psycopg2.extensions import ISOLATION_LEVEL_AUTOCOMMIT
 
 from swagger_server.models.event import Event  # noqa: E501
 from swagger_server.models.event_list import EventList  # noqa: E501
+from swagger_server.models.event_status_update import EventStatusUpdate
 from swagger_server.models.event_not_found_error import EventNotFoundError  # noqa: E501
 from swagger_server.models.unexpected_service_error import UnexpectedServiceError  # noqa: E501
 from swagger_server import util
 
 port=5432 #Change according to port in Docker
+
+
+def create_event(body):  # noqa: E501
+    """Used to create an Event.
+
+     # noqa: E501
+
+    :param body: Event object containing the Event details.
+    :type body: dict | bytes
+
+    :rtype: Event
+    """
+    if connexion.request.is_json:
+        body = Event.from_dict(connexion.request.get_json())  # noqa: E501
+    return 'do some magic!'
+
+
+def create_event_options():  # noqa: E501
+    """Used to respond to browser with Access-Control-Allow-Methods header. Required for POST.
+
+     # noqa: E501
+
+
+    :rtype: None
+    """
+    return 'do some magic!'
 
 
 def get_event_details(event_id):  # noqa: E501
@@ -65,7 +92,6 @@ def get_event_details(event_id):  # noqa: E501
         con.close()
         error = UnexpectedServiceError(code="500", type="UnexpectedServiceError", message=str(e))
         return error, 500, {'Access-Control-Allow-Origin': '*'}
-
 
 
 def list_events(event_title=None, event_category=None, event_desc=None):  # noqa: E501
@@ -140,3 +166,49 @@ def list_events(event_title=None, event_category=None, event_desc=None):  # noqa
         error = UnexpectedServiceError(code="500", type="UnexpectedServiceError", message=str(e))
         return error, 500, {'Access-Control-Allow-Origin': '*'}
 
+
+def update_event(event_id, body):  # noqa: E501
+    """Used to update the Event details. Replaces the Event resource.
+
+     # noqa: E501
+
+    :param event_id: ID of the Event to be updated.
+    :type event_id: int
+    :param body: Event object to update. Performs a complete replace of the Event details.
+    :type body: dict | bytes
+
+    :rtype: Event
+    """
+    if connexion.request.is_json:
+        body = Event.from_dict(connexion.request.get_json())  # noqa: E501
+    return 'do some magic!'
+
+
+def update_event_options(event_id):  # noqa: E501
+    """Used to respond to browser with Access-Control-Allow-Methods header. Required for PUT.
+
+     # noqa: E501
+
+    :param event_id: ID of the Event to be updated.
+    :type event_id: int
+
+    :rtype: None
+    """
+    return 'do some magic!'
+
+
+def update_event_status(event_id, body):  # noqa: E501
+    """Used to update the Status of a single Event e.g. Cancel an Event.
+
+     # noqa: E501
+
+    :param event_id: ID of the Event to be updated.
+    :type event_id: int
+    :param body: The patch operation to perform. Only Event status update is supported.
+    :type body: dict | bytes
+
+    :rtype: Event
+    """
+    if connexion.request.is_json:
+        body = EventStatusUpdate.from_dict(connexion.request.get_json())  # noqa: E501
+    return 'do some magic!'
